# ocaml-multicore-ci

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.web  Makefile  README.md  bonsai-app.opam  bonsai-dream.opam  dune  dune-project  graphql_schema.json  ocaml-multicore-ci-api.opam  ocaml-multicore-ci-client.opam  ocaml-multicore-ci-service.opam  ocaml-multicore-ci-solver.opam  ocaml-multicore-ci-web.opam
api/: build.capnp  client.ml  client.mli  dune  raw.ml  schema.capnp  solve.capnp  solver.ml  worker.ml
bonsai-app/: README.md  bonsai_app.ml  dune  effect_lwt.ml  graphql_loader.ml  graphql_loader.mli  index.html  models.ml  nav.ml  template.ml  template.mli
bonsai-app/graphql/: client.mli  dune  graphql_schema.json  queries.ml
bonsai-dream/: backend.ml  backend.mli  ci_graphql.ml  ci_graphql.mli  dune  github.ml  main.ml  template.ml
client/: dune  logging.ml  main.ml
lib/: analyse.ml  analyse.mli  analyse_ocamlformat.ml  analyse_ocamlformat.mli  backend_solver.ml  backend_solver.mli  build.ml  build.mli  build_from_clone_component.ml  build_from_clone_component.mli  buildkit_syntax.ml  cluster_build.ml  cluster_build.mli  dune  dune_build_cache.ml  dune_build_cache.mli  index.ml  index.mli  lint.ml  lint.mli  log.ml  opam_build.ml  opam_build.mli  opam_monorepo.ml  opam_monorepo.mli  pipeline_utils.ml  platform.ml  platform.mli  repo_url_utils.ml  sandmark_build.ml  sandmark_packages.ml  sandmark_rev_parse.ml  selection.ml  selection.mli  solver_pool.ml  spec.ml  spec.mli
service/: api_impl.ml  api_impl.mli  conf.ml  dune  local.ml  main.ml  pipeline.ml  pipeline.mli
solver/: dune  git_context.ml  main.ml  opam_repository.ml  service.ml  service.mli  solver.ml
static/: dune
test/: dune  gen_project.ml  gen_project.mli  test.ml  test_analyse.ml  test_index.ml  test_platforms.ml
web-app/: .env.development  .gitignore  bsconfig.json  graphql_schema.json  package.json  tailwind.config.js
web-app/public/: index.html
web-app/src/: App.res  ConfigHooks.res  Index.res  env.res  index.js
web-app/src/assets/css/: index.css
web-app/src/components/icons/: IconRefresh.res
web-app/src/components/jobs/: OutcomeDisplay.res
web-app/src/components/navigation/: Header.res  Link.res  RefreshBar.res  RefreshBarWithQuery.res
web-app/src/theme/: Theme.res
web-app/src/utils/: URL.res  URLSearchParams.res  dayjs_utils.res  interval_utils.res  string_utils.res  window_utils.res
web-app/src/views/: GitHubView.res  GridView.res  JobsView.res  MainView.res  ResultsView.res
web-ui/: backend.ml  backend.mli  badges.ml  ci_graphql.ml  ci_graphql.mli  dune  github.ml  homepage.ml  log.ml  main.ml  template.ml
