(library
 (name ocaml_multicore_ci)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries
  logs
  current
  current_docker
  current_github
  current.term
  ocaml-multicore-ci-api
  str
  capnp-rpc-unix
  current.cache
  ppx_deriving_yojson.runtime
  ocaml-version
  opam-0install
  solver-worker
  current_ocluster
  ocluster-api
  obuilder-spec))
