(executable
 (name test)
 (libraries
  ocaml_multicore_ci
  alcotest
  alcotest-lwt
  ppx_deriving_yojson.runtime
  logs.fmt)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_yojson)))

(rule
 (alias runtest)
 (package ocaml-multicore-ci-service)
 (deps
  (package solver-service))
 (action
  (run ./test.exe)))
