(executable
  (name main)
  (public_name ocaml-multicore-ci-web)
  (package ocaml-multicore-ci-web)
  (libraries lwt.unix
             logs.fmt
             fmt.tty
             current_ansi
             cohttp-lwt-unix
             tyxml
             prometheus-app.unix
             ocaml-multicore-ci-api
             capnp-rpc-unix
             yojson
             ppx_deriving_yojson.runtime)
(preprocess (pps ppx_deriving_yojson)))
